--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     body{font-family:'Montserrat',system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,sans-serif;background-image:url('https://bam.uwu.ai/assets/videos/bg.mp4.jpg?v=07d40e33');background-size:cover;background-attachment:fixed;background-repeat:no-repeat;color:#fff;min-height:100vh;-webkit-font-smoothing:antialiased;line-height:1.6}
     .site-header{position:sticky;top:0;z-index:10;display:flex;align-items:center;gap:18px;padding:18px 28px;margin:0 auto;max-width:1200px;background:var(--glass);border-radius:0 0 20px 20px;backdrop-filter:blur(14px);box-shadow:0 6px 24px rgba(199,21,133,0.08);border-bottom:2px solid rgba(255,105,180,0.18)}
     .site-logo{height:56px;border-radius:12px;background:#fff;display:block;box-shadow:0 6px 18px rgba(199,21,133,0.08);transition:transform .18s,box-shadow .18s;cursor:pointer; animation:spin 0.000000000000000000000000001s infinite}
-    .site-logo:hover{transform:scale(0.42);box-shadow:0 10px 30px rgba(255,105,180,0.12);animation:spin 0.000000001s infinite}
+    .site-logo:hover{transform:scale(0.42);box-shadow:0 10px 30px rgba(255,105,180,0.12);}
     .site-logo.spin-once{animation:spin 0.6s ease-in-out}
     .site-title{font-weight:900;font-size:1.6rem;color:var(--pink);text-transform:uppercase;letter-spacing:1px;margin-left:10px}
     .site-nav{margin-left:auto;display:flex;gap:12px}
