fixed bugged text -uwu labs

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <h1 id="merch">Where you can find BamBaeYoh!</h1>
       <a href="https://bam.uwu.ai" target="_blank" rel="noopener noreferrer"><button class="bam-button">BamBaeYoh's Socials!</button></a>
 
-      <p class="footer">Built as a fan project — Sky</p>
+      <p class="footer">Built as a fan project —uwu labs</p>
     </div>
   </main>
 
